# supply-args

./: README.rst  pyproject.toml  run_formatters.sh  setup.cfg
docs/: conf.py  index.rst  introduction.rst  supply_args.decorator.rst
supply_args/: __init__.py  decorator.py
tests/: test_supply_args.py
