[tool.poetry]
name = "supply-args"
version = "0.0.3"
description = "Take function arguments from context variables and various other sources (WARNING: unstable alpha version. Things may break)."
license = "MIT"
authors = ["Dmitry Vasilyanov <vdmit11@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/vdmit11/supply-args"
documentation = "https://supply-args.readthedocs.io"
keywords = ["functions", "utils", "contextvars", "dependency-injection"]
exclude = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.2"
black = "^21.7b0"
ipython = "^7.26.0"
isort = "^5.9.3"
mypy = "^0.910"
pylava = "^0.3.0"
pylava-pylint = "^0.0.3"
pytest = "^6.2.4"
pytest-black = "^0.3.12"
pytest-cov = "^2.12.1"
pytest-isort = "^2.0.0"
pytest-mypy = "^0.8.1"
radon = "^5.1.0"
rpdb = "^0.1.6"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"
sphinx-rtd-theme = "^0.5.2"
sphinx-toggleprompt = "^0.0.5"
tox = "^3.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
